--- a/greenpost/src/app/components/workspaces/my-orders/section/section.component.html
+++ b/greenpost/src/app/components/workspaces/my-orders/section/section.component.html
@@ -1,41 +1,45 @@
-<mat-card>
+<mat-card fxLayoutGap="20px">
     <mat-card-header>
         <mat-card-title>Фильтр</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
-        <form class="example-form">
-            <mat-form-field class="example" fxFlex="1 1 auto">
+    <mat-card-content fxLayoutGap="20px">
+        <form>
+            <mat-form-field fxFlex="1 1 auto">
                 <input matInput placeholder="ТТН" value="123456">
             </mat-form-field>
-            <mat-form-field class="example" fxFlex="1 1 auto">
+            <mat-form-field fxFlex="1 1 auto">
                 <input matInput placeholder="Адрес" value="Маяковского 25">
             </mat-form-field>
 
-            <mat-form-field class="example-chip-list">
-                <mat-chip-list #chipList>
-                    <mat-chip *ngFor="let phone of phones" [selectable]="selectable"
-                              [removable]="removable" (removed)="remove(phone)">
-                        {{phone.name}}
-                        <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                    </mat-chip>
-                    <input placeholder="Добавить номер телефона..."
-                           [matChipInputFor]="chipList"
-                           [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                           [matChipInputAddOnBlur]="addOnBlur"
-                           (matChipInputTokenEnd)="add($event)">
-                </mat-chip-list>
-            </mat-form-field>
-            <mat-form-field class="example" fxFlex="1 1 auto">
+            <mat-card fxLayoutGap="20px">
+                <mat-card-content fxLayoutGap="20px">
+                    <mat-form-field>
+                        <mat-chip-list #chipList>
+                            <mat-chip *ngFor="let phone of phones" [selectable]="selectable"
+                                      [removable]="removable" (removed)="remove(phone)">
+                                {{phone.name}}
+                                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                            </mat-chip>
+                            <input placeholder="Добавить номер телефона..."
+                                   [matChipInputFor]="chipList"
+                                   [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                                   [matChipInputAddOnBlur]="addOnBlur"
+                                   (matChipInputTokenEnd)="add($event)">
+                        </mat-chip-list>
+                    </mat-form-field>
+                </mat-card-content>
+            </mat-card>
+            <mat-form-field fxFlex="1 1 auto">
                 <input matInput placeholder="Получатель" value="Ткачук Віталій">
             </mat-form-field>
         </form>
     </mat-card-content>
 </mat-card>
-<mat-card>
+<mat-card fxLayoutGap="20px">
     <mat-card-header>
         <mat-card-title>Мои заказы</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
+    <mat-card-content fxLayoutGap="20px">
         <table mat-table [dataSource]="dataSource" multiTemplateDataRows fxFlex>
             <ng-container matColumnDef="id">
                 <mat-header-cell *matHeaderCellDef>№</mat-header-cell>
@@ -67,13 +71,13 @@
                 <mat-cell *matCellDef="let element"> {{element.price}} </mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="typeOfOrder">
+            <ng-container matColumnDef="type">
                 <mat-header-cell *matHeaderCellDef> Тип доставки </mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.typeOfOrder}} </mat-cell>
+                <mat-cell *matCellDef="let element"> {{element.type}} </mat-cell>
             </ng-container>
 
-            <mat-header-row *matHeaderRowDef="['id','from','to','reciever','status', 'price', 'typeOfOrder']"></mat-header-row>
-            <mat-row class="clickable-row" *matRowDef="let element; columns: ['id','from','to','reciever','status', 'price', 'typeOfOrder'];" (click)="openCard(element.id)"></mat-row>
+            <mat-header-row *matHeaderRowDef="['id','from','to','reciever','status', 'price', 'type']"></mat-header-row>
+            <mat-row class="clickable-row" *matRowDef="let element; columns: ['id','from','to','reciever','status', 'price', 'type'];" (click)="openCard(element.id)"></mat-row>
         </table>
     </mat-card-content>
 </mat-card>
