--- a/greenpost/src/app/components/workspaces/my-starter/my-starter.component.html
+++ b/greenpost/src/app/components/workspaces/my-starter/my-starter.component.html
@@ -66,6 +66,6 @@
     </mat-card>
 </div>
 <button mat-fab color="warn" class="floating-button" matTooltip="Создать новый заказ" matTooltipPosition="left"><mat-icon>add</mat-icon></button>
-<button mat-fab color="primary" class="floating-button" matTooltip="Загрузить из файла" matTooltipPosition="left" [style.bottom]="'110px'"><mat-icon>person_add</mat-icon></button>
-<button mat-fab color="warn" class="floating-button" matTooltip="Найти заказ" matTooltipPosition="left" [style.bottom]="'175px'"><mat-icon>search</mat-icon></button>
+<button mat-fab color="primary" class="floating-button" matTooltip="Добавить пользователя" matTooltipPosition="left" [style.bottom]="'110px'"><mat-icon>person_add</mat-icon></button>
+<button mat-fab color="accent" class="floating-button" matTooltip="Найти заказ" matTooltipPosition="left" [style.bottom]="'175px'"><mat-icon>search</mat-icon></button>
 <button mat-fab color="primary" class="floating-button" matTooltip="Добавить точку вывоза" matTooltipPosition="left" [style.bottom]="'240px'"><mat-icon>add_location</mat-icon></button>
