--- a/greenpost/src/app/components/workspaces/logistics-courier/card/card.component.html
+++ b/greenpost/src/app/components/workspaces/logistics-courier/card/card.component.html
@@ -1,4 +1,78 @@
-<mat-card>
+<div fxLayout="column" fxLayout.gt-sm="row">
+    <mat-card fxFlex="2 2 auto">
+        <mat-card-header>
+            <mat-card-title>Основная информация</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap.gt-xs="20px">
+                <div fxFlex="1 1 auto" fxLayout="column">
+                    <mat-form-field>
+                        <input matInput placeholder="ТТН" value="1" />
+                    </mat-form-field>
+                    <mat-form-field>
+                        <input matInput placeholder="Получатель" value="Игорь Иванов" />
+                    </mat-form-field>
+                </div>
+                <div fxFlex="1 1 auto" fxLayout="column">
+                    <mat-form-field>
+                        <input matInput placeholder="Адрес отправителя" value="Маяковского 18" />
+                    </mat-form-field>
+                    <mat-form-field>
+                        <input matInput placeholder="Адрес получателя" value="Лаврухина 7" />
+                    </mat-form-field>
+                </div>
+                <div fxFlex="1 1 auto" fxLayout="column">
+                    <mat-form-field>
+                        <mat-select placeholder="Тип доставки" disabled>
+                            <mat-option>Стандарт</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field>
+                        <input matInput placeholder="Комментарий" />
+                    </mat-form-field>
+                </div>
+                <span fxFlex></span>
+            </div>
+        </mat-card-content>
+    </mat-card>
+    <mat-card fxFlex="1 1 auto">
+        <mat-card-header>
+            <mat-card-title>Средства связи</mat-card-title>
+        </mat-card-header>
+        <mat-card-content fxLayout="column">
+            <mat-form-field>
+                <mat-chip-list #senders>
+                    <mat-chip *ngFor="let phone of phones" [selectable]="selectable"
+                              [removable]="removable" (removed)="remove(phone)">
+                        {{phone.name}}
+                        <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                    </mat-chip>
+                    <input placeholder="Контакты отправителя..."
+                           [matChipInputFor]="senders"
+                           [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                           [matChipInputAddOnBlur]="addOnBlur"
+                           (matChipInputTokenEnd)="add($event)">
+                </mat-chip-list>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-chip-list #recievers>
+                    <mat-chip *ngFor="let phone of phones" [selectable]="selectable"
+                              [removable]="removable" (removed)="remove(phone)">
+                        {{phone.name}}
+                        <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                    </mat-chip>
+                    <input placeholder="Контакты получателя..."
+                           [matChipInputFor]="recievers"
+                           [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                           [matChipInputAddOnBlur]="addOnBlur"
+                           (matChipInputTokenEnd)="add($event)">
+                </mat-chip-list>
+            </mat-form-field>
+        </mat-card-content>
+    </mat-card>
+</div>
+
+<!--<mat-card>
     <mat-card-header>
         <mat-card-title>Заказ №</mat-card-title>
     </mat-card-header>
@@ -44,7 +118,7 @@
             <span fxFlex></span>
         </div>
     </mat-card-content>
-</mat-card>
+</mat-card>-->
 <mat-card>
     <mat-card-header>
         <mat-card-title>Карта</mat-card-title>
