--- a/greenpost/src/app/components/workspaces/logistics-courier/section/section.component.html
+++ b/greenpost/src/app/components/workspaces/logistics-courier/section/section.component.html
@@ -1,24 +1,28 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title>Фильтр</mat-card-title>
+        <mat-card-title>Поиск</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
-        <form class="example-form">
-            <mat-form-field class="example" fxFlex="1 1 auto">
-                <input matInput placeholder="Курьер" value="Вася">
-            </mat-form-field>
-            <mat-form-field class="example" fxFlex="1 1 auto">
-                <input matInput placeholder="№ Заказа" value="A123">
-            </mat-form-field>
-            <mat-form-field class="example" fxFlex="1 1 auto">
-                <input matInput placeholder="Клиент" value="Нова Пошта">
-            </mat-form-field>
-            <mat-form-field class="example" fxFlex="1 1 auto">
-                <input matInput placeholder="Статус" value="сделан">
-            </mat-form-field>
-        </form>
+    <mat-card-content fxLayoutGap="20px" fxLayout="row" fxLayout.lt-md="column">
+        <mat-form-field fxFlex="1 1 auto">
+            <input matInput placeholder="Курьер" value="Вася">
+        </mat-form-field>
+        <mat-form-field fxFlex="1 1 auto">
+            <input matInput placeholder="№ Заказа" value="A123">
+        </mat-form-field>
+        <mat-form-field fxFlex="1 1 auto">
+            <input matInput placeholder="Клиент" value="Нова Пошта">
+        </mat-form-field>
+        <mat-form-field fxFlex="1 1 auto">
+            <input matInput placeholder="Статус" value="сделан">
+        </mat-form-field>
+        <mat-form-field fxFlex="1 1 auto">
+            <input matInput [matDatepicker]="picker" placeholder="Выберите дату">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
     </mat-card-content>
 </mat-card>
+
 <mat-card>
     <mat-card-header>
         <mat-card-title>Мои заказы</mat-card-title>
